--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,6 +21,9 @@ jobs:
       with:
         go-version: '1.20'
 
+    - name: Update go.sum
+      run: go mod tidy
+
     - name: Build
       run: go build -v ./...
 
