--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,8 +21,8 @@ jobs:
       with:
         go-version: '1.20'
 
-    - name: Update go.sum
-      run: go mod tidy
+    # - name: Update go.sum
+    #   run: go mod tidy
 
     - name: Build
       run: go build -v ./...
