--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -28,4 +28,12 @@ jobs:
       run: go build -v ./...
 
     - name: Test
-      run: go test -v ./...
+      run: |
+        go test -coverprofile=cover.out -coverpkg=./... ./...
+        go tool cover -html=cover.out -o cover.html
+
+    - name: Upload coverage to codecov.io
+      uses: codecov/codecov-action@v4
+      with:
+        verbose: true
+        token: ${{ secrets.CODECOV_TOKEN }}
